--- a/TaidouARPGProject/Assembly-CSharp.csproj
+++ b/TaidouARPGProject/Assembly-CSharp.csproj
@@ -251,6 +251,7 @@
      <Compile Include="Assets\Script\mainmenu\transcriptmap\TranscroptMapDialog.cs" />
      <Compile Include="Assets\Script\mainmenu\transcriptmap\TrascripMap.cs" />
      <Compile Include="Assets\Script\Player\PlayerAnimatar.cs" />
+     <Compile Include="Assets\Script\Player\PlayerMove.cs" />
      <Compile Include="Assets\Script\Player\PlayerNav.cs" />
      <Compile Include="Assets\Script\Player\PlayerVillageAnimatorl.cs" />
      <Compile Include="Assets\Script\Player\PlayervillageMove.cs" />
