--- a/TaidouARPGProject/TaidouARPGProject.Plugins.csproj
+++ b/TaidouARPGProject/TaidouARPGProject.Plugins.csproj
@@ -5,16 +5,16 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A7DAF2CF-66F8-EF76-21EE-D4979A2BBCDA}</ProjectGuid>
+    <ProjectGuid>{9FCC2288-7E1C-112A-4A15-53831651BB67}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AssemblyName>Assembly-CSharp-Editor</AssemblyName>
+    <AssemblyName>Assembly-CSharp-firstpass</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
-    <UnityProjectType>Editor:5</UnityProjectType>
+    <UnityProjectType>GamePlugins:3</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.3.0p3</UnityVersion>
     <RootNamespace></RootNamespace>
@@ -282,18 +282,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="TaidouARPGProject.Plugins.csproj">
-      <Project>{9FCC2288-7E1C-112A-4A15-53831651BB67}</Project>
-      <Name>TaidouARPGProject.Plugins</Name>
-    </ProjectReference>
-    <ProjectReference Include="TaidouARPGProject.csproj">
-      <Project>{E000002B-2587-E506-A925-9F1DF40581E1}</Project>
-      <Name>TaidouARPGProject</Name>
-    </ProjectReference>
-    <ProjectReference Include="TaidouARPGProject.unityproj">
-      <Project>{E000002B-2587-E506-A925-9F1DF40581E1}</Project>
-      <Name>TaidouARPGProject</Name>
-    </ProjectReference>
     <ProjectReference Include="com.unity.postprocessing.Editor.csproj">
       <Project>{8C3967EF-EA5C-CD2A-F191-ADB2A5FEC7D2}</Project>
       <Name>com.unity.postprocessing.Editor</Name>
@@ -304,92 +292,43 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\NGUI\Examples\Scripts\InventorySystem\Editor\InvDatabaseInspector.cs" />
-    <Compile Include="Assets\NGUI\Examples\Scripts\InventorySystem\Editor\InvFindItem.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\ActiveAnimationEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\BMFontReader.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\ComponentSelector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\EventDelegateDrawer.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\EventDelegateEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\FreeType.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\MinMaxRangeAttributeDrawer.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\NGUIContextMenu.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\NGUIEditorExtensions.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\NGUIEditorTools.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\NGUIHandles.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\NGUIHelp.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\NGUIJson.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\NGUIMenu.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\NGUISelectionTools.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\NGUISettings.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\NGUISnap.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\NGUITransformInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\PropertyBindingEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\PropertyReferenceDrawer.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\SpriteSelector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\TweenAlphaEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\TweenColorEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\TweenFOVEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\TweenHeightEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\TweenOrthoSizeEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\TweenPositionEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\TweenRotationEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\TweenScaleEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\TweenTransformEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\TweenVolumeEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\TweenWidthEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\TypewriterEffectEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UI2DSpriteEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIAnchorEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIAtlasInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIAtlasMaker.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIBasicSpriteEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIButtonColorEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIButtonEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIButtonKeysEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIButtonMessageEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UICameraEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UICameraTool.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIColorPickerEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UICreateNewUIWizard.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UICreateWidgetWizard.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIDragObjectEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIDrawCallInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIDrawCallViewer.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIEventTriggerEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIFontInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIFontMaker.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIForwardEventsEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIGridEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIImageButtonInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIInputEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIKeyNavigationEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UILabelInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UILocalizeEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIPanelInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIPanelTool.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIPlayAnimationEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIPlayTweenEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIPopupListInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIPrefabTool.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIProgressBarEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIRectEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIRootEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIScrollBarEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIScrollViewEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UISliderEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UISnapshotPointEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UISpriteAnimationInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UISpriteInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIStretchEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UITableEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UITextureInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UITexturePacker.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIToggleInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UITweenerEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIWidgetContainerEditor.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIWidgetInspector.cs" />
-    <Compile Include="Assets\NGUI\Scripts\Editor\UIWrapContentEditor.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\EffectScriptSample.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NcDetachObject.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NcDisableDelayActive.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NcDontActive.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NcEffectAniBehaviour.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NcEffectBehaviour.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NcEffectInitBackup.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NcRandomTimerTool.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NcRepeatTimerTool.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NcTimerTool.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NcTransformTool.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NgInterpolate.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NsEffectManager.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NsRenderManager.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\Common\NsSharedManager.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcAddForce.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcAttachPrefab.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcAttachSound.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcAutoDeactive.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcAutoDestruct.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcBillboard.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcChangeAlpha.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcCurveAnimation.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcDelayActive.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcDetachParent.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcDuplicator.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcParticleEmit.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcParticleSpiral.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcParticleSystem.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcRotation.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcSpriteAnimation.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcSpriteFactory.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcSpriteTexture.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcTilingTexture.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcTrailTexture.cs" />
+    <Compile Include="Assets\Plugins\IGSoft_Resources\Scripts\NcEffect\NcUvAnimation.cs" />
+    <Compile Include="Assets\Plugins\Pixelplacement\iTween\iTween.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Effects\Shaders\GlowAdditiveTwoColor.shader" />
