--- a/TaidouARPGProject/Assembly-CSharp.csproj
+++ b/TaidouARPGProject/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\bloodScreen.cs" />
      <Compile Include="Assets\Effects\Scripts\Demo\MyGuiV2.cs" />
      <Compile Include="Assets\Effects\Scripts\Prefabs\Balls\AddMaterialOnHit.cs" />
      <Compile Include="Assets\Effects\Scripts\Prefabs\Balls\AnimatorBehaviour.cs" />
